# agent-admin-qonto

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
.claude/skills/devis-qonto/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
alembic/: env.py
docs/validation/: contacts-suivi.md  interview-guide-promesse-2-minutes.md  messages-recrutement.md
examples/: client-create.json  invoice-simple.json  product-create.json  quote-simple.json  quote-with-discount.json
landing/: index.html  style.css
proxy/: .env.example  Dockerfile  pyproject.toml  railway.json
proxy/src/: auth.py  config.py  main.py  qonto_client.py  ws_client.py
proxy/src/routes/: clients.py  health.py  invoices.py  products.py  quotes.py
proxy/tests/: conftest.py  test_auth.py  test_qonto_client.py
src/: cli.js  clients.js  config.py  db.py  invoices.js  main.py  products.js  qonto.js  quotes.js  reports.js  state.js  validate.js
src/agent/: context.py  loop.py  router.py
src/agent/tools/: memory.py  qonto_clients.py  qonto_invoices.py  (+4 more)
src/billing/: stripe_checkout.py  usage.py  webhooks.py
src/models/: __init__.py  conversation.py  memory.py  proxy.py  subscription.py  tenant.py
src/monitoring/: __init__.py  resilience.py
src/rag/: __init__.py  embeddings.py  entity_detector.py  indexer.py  search.py
src/telegram/: auth.py  bot.py  handlers.py
src/websocket/: health.py  protocol.py  server.py
tests/: conftest.py  test_agent_loop.py  test_agent_routing.py  test_health.py  test_memo_pipeline.py  test_monitoring.py  test_qonto_invoices.py  test_qonto_quotes.py  test_qonto_reports.py  test_qonto_tools.py  test_rag.py  test_stripe.py  test_telegram_auth.py  test_telegram_handlers.py  test_websocket.py  test_whisper.py
